--- a/charts/hermes/templates/secretproviderclass.yaml
+++ b/charts/hermes/templates/secretproviderclass.yaml
@@ -4,11 +4,11 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: {{ include "hermes.fullname" . }}-{{ $chainId }}-secrets-store
+  name: {{ include "hermes.fullname" $ }}-{{ $chainId }}-secrets-store
 spec:
   provider: {{ .Values.secretProvider.provider }}
   secretObjects:
-  - secretName: {{ include "hermes.fullname" . }}-{{ $chainId }}-key
+  - secretName: {{ include "hermes.fullname" $ }}-{{ $chainId }}-key
     type: Opaque
     data:
     - objectName: {{ $chain.key.name }}.json
