--- a/crates/astria-composer/local.env.example
+++ b/crates/astria-composer/local.env.example
@@ -27,6 +27,9 @@ ASTRIA_COMPOSER_API_LISTEN_ADDR="0.0.0.0:0"
 # Address of the RPC server for the sequencer chain
 ASTRIA_COMPOSER_SEQUENCER_URL="http://127.0.0.1:26657"
 
+# Chain ID of the sequencer chain which transactions are submitted to.
+ASTRIA_COMPOSER_SEQUENCER_CHAIN_ID="astria-dev-1"
+
 # A list of execution `<rollup_name_1>::<rpc_server_1>,<rollup_name_2>::<rpc_server_2>`.
 # Rollup names are not case sensitive. If a name is repeated, the last list item is used.
 # names are sha256 hashed and used as the `rollup_id` in `SequenceAction`s
