fix tests, use insta snapshot

--- a/crates/astria-core/Cargo.toml
+++ b/crates/astria-core/Cargo.toml
@@ -51,6 +51,7 @@ base64-serde = ["dep:base64-serde"]
 rand = { workspace = true }
 tonic-build = "0.10"
 walkdir = "2.4.0"
+insta = { workspace = true, features = ["json"] }
 
 tempfile = { workspace = true }
 which = { workspace = true }
