--- a/charts/evm-rollup/templates/configmap.yaml
+++ b/charts/evm-rollup/templates/configmap.yaml
@@ -104,7 +104,7 @@ metadata:
   namespace: {{ include "rollup.namespace" .  }}
 data:
   home_dir: "/home/geth"
-  data_dir: "/home/geth/{{ .Values.config.rollup.name }}geth"
+  data_dir: "/home/geth/{{ .Values.config.rollup.name }}"
 ---
 apiVersion: v1
 kind: ConfigMap
