update buf breaking checks

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,12 +26,24 @@ jobs:
       # fails if new packages are added
       - uses: bufbuild/buf-breaking-action@v1
         with:
+          input: "proto/primitives"
+          against: "buf.build/astria/primitives"
+      - uses: bufbuild/buf-breaking-action@v1
+        with:
           input: "proto/executionapis"
           against: "buf.build/astria/execution-apis"
       - uses: bufbuild/buf-breaking-action@v1
         with:
-          input: "proto/sequencerapis"
-          against: "buf.build/astria/astria"
+          input: "proto/sequencerblockapis"
+          against: "buf.build/astria/sequencerblock-apis"
+      - uses: bufbuild/buf-breaking-action@v1
+        with:
+          input: "proto/protocolapis"
+          against: "buf.build/astria/protocol-apis"
+      - uses: bufbuild/buf-breaking-action@v1
+        with:
+          input: "proto/composerapis"
+          against: "buf.build/astria/composer-apis"
 
   rust:
     runs-on: ubuntu-22.04
