--- a/crates/astria-bridge/local.env.example
+++ b/crates/astria-bridge/local.env.example
@@ -1,5 +1,5 @@
 # A list of filter directives of the form target[span{field=value}]=level.
-ASTRIA_BRIDGE_LOG=astria_sequencer_relayer=info
+ASTRIA_BRIDGE_LOG=astria_bridge=info
 
 # If true disables writing to the opentelemetry OTLP endpoint.
 ASTRIA_BRIDGE_NO_OTEL=false
@@ -24,11 +24,7 @@ NO_COLOR=
 # serves RPCs.
 ASTRIA_BRIDGE_COMETBFT_ENDPOINT="http://127.0.0.1:26657"
 
-# The duration in milliseconds that sequencer-relayer sleeps before
-# requesting a new block from sequencer.
-ASTRIA_BRIDGE_SEQUENCER_BLOCK_TIME_SECONDS=1000
-
-# The socket address at which sequencer relayer will server healthz, readyz, and status calls.
+# The socket address at which the bridge service will server healthz, readyz, and status calls.
 ASTRIA_BRIDGE_API_ADDR=127.0.0.1:2450
 
 # Set to true to enable prometheus metrics.
