--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,9 +25,9 @@ jobs:
         if: github.event_name == 'pull_request'
         run: |
           if [ "${{ github.event_name }}" == "pull_request" ]; then
-            echo "buf_repo_ending='pr/${{ github.event.number }}'" >> $GITHUB_ENV
+            echo "buf_repo_ending=pr/${{ github.event.number }}" >> $GITHUB_ENV
           else
-            echo "buf_repo_ending='main'" >> $GITHUB_ENV
+            echo "buf_repo_ending=main" >> $GITHUB_ENV
           fi
       - name: "Upload Composer API Protos"
         uses: bufbuild/buf-push-action@v1
