chore(proto)!: create wrapper types for `RollupId` and `Account` (#987)
## Summary
Creates wrapper proto types for `RollupId` and `Account`, which can
allow us to add more representations and acceptable formats for them as
non breaking changes in the future.

## Background
We were using `Account` and `RollupId` as simple raw bytes, this means
any change would be a breaking change, now we can do non breaking
changes such as offering bech32 address versions.

## Changes
- Switched to wrapper types for all references of RollupId and Account

## Testing
CI/CD

## Metrics
- List out metrics added by PR, delete section if none. 

## Breaking Changelist
- Changes core transaction protos

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,13 +14,21 @@ jobs:
     runs-on: ubuntu-latest
     environment: BUF
     needs: run_checker
-    if: needs.run_checker.outputs.run_release_proto == 'true' && github.repository_owner == 'astriaorg'
+    if: github.event_name != 'merge_group' && needs.run_checker.outputs.run_release_proto == 'true' && github.repository_owner == 'astriaorg'
     steps:
       - uses: actions/checkout@v4
       - uses: bufbuild/buf-setup-action@v1
         with:
           version: "1.15.1"
           github_token: ${{ github.token }}
+      - name: "Get Buf Branch Annotation"
+        if: github.event_name == 'pull_request'
+        run: |
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            echo "buf_repo_ending=${{ github.event.number }}/merge" >> $GITHUB_ENV
+          else
+            echo "buf_repo_ending=main" >> $GITHUB_ENV
+          fi
       - name: "Upload Composer API Protos"
         uses: bufbuild/buf-push-action@v1
         with:
@@ -36,6 +44,8 @@ jobs:
       - name: "Update Sequencer Block API dependency"
         run: |
           cd proto/sequencerblockapis
+          BUF_COMMIT=$(buf beta registry commit get buf.build/astria/primitives:${{ env.buf_repo_ending }} --format=json | jq -r '.commit')
+          sed -i "s/buf.build\/astria\/primitives/buf.build\/astria\/primitives:$BUF_COMMIT/" buf.yaml
           buf mod update --only buf.build/astria/primitives
       - name: "Upload Sequencer Block API Protos"
         uses: bufbuild/buf-push-action@v1
@@ -46,6 +56,8 @@ jobs:
       - name: "Update Execution API dependency"
         run: |
           cd proto/executionapis
+          BUF_COMMIT=$(buf beta registry commit get buf.build/astria/sequencerblock-apis:${{ env.buf_repo_ending }} --format=json | jq -r '.commit')
+          sed -i "s/buf.build\/astria\/primitives/buf.build\/astria\/sequencerblock-apis:$BUF_COMMIT/" buf.yaml
           buf mod update --only buf.build/astria/sequencerblock-apis
       - name: "Upload Execution API Protos"
         uses: bufbuild/buf-push-action@v1
@@ -56,6 +68,8 @@ jobs:
       - name: "Update Protocol API dependency"
         run: |
           cd proto/protocolapis
+          BUF_COMMIT=$(buf beta registry commit get buf.build/astria/primitives:${{ env.buf_repo_ending }} --format=json | jq -r '.commit')
+          sed -i "s/buf.build\/astria\/primitives/buf.build\/astria\/primitives:$BUF_COMMIT/" buf.yaml
           buf mod update --only buf.build/astria/primitives
       - name: "Upload Protocol API Protos"
         uses: bufbuild/buf-push-action@v1
@@ -69,7 +83,7 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     needs: run_checker
-    if: needs.run_checker.outputs.run_release_charts == 'true'
+    if: github.ref_name == 'main' && needs.run_checker.outputs.run_release_charts == 'true'
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
