hermes updated to match sequencer secret pattern

--- a/charts/hermes/templates/secretproviderclass.yaml
+++ b/charts/hermes/templates/secretproviderclass.yaml
@@ -1,21 +1,14 @@
 {{- if .Values.secretProvider.enabled }}
   {{- range $chainId, $chain := .Values.chains }}
+  {{- $_ := set $ "key" $chain.key }}
 ---
 apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: {{ include "hermes.fullname" $ }}-{{ $chainId }}-secrets-store
 spec:
-  provider: {{ .Values.secretProvider.provider }}
-  secretObjects:
-  - secretName: {{ include "hermes.fullname" $ }}-{{ $chainId }}-key
-    type: Opaque
-    data:
-    - objectName: {{ $chain.key.name }}.json
-      key: {{ $chain.key.secret.key }}
+  provider: {{ $.Values.secretProvider.provider }}
   parameters:
-    secrets: |
-      - resourceName: {{ $chain.key.secret.resourceName }}
-        fileName: "{{ $chain.key.secret.filename }}"
+    {{- tpl $.Values.secretProvider.parametersTemplate $ | nindent 4 }}
   {{- end }}
 {{- end }}
