--- a/charts/hermes/values.yaml
+++ b/charts/hermes/values.yaml
@@ -68,15 +68,13 @@ chains:
   #       address_type: Astria
   #     secret:
   #       resourceName: projects/$PROJECT_ID/secrets/astria-ibc-relay-key/versions/latest
-  #       filename: astria-wallet.json
-  #       key: token
   #   eventSource:
   #     mode: pull
   #     interval: 1s
   #   gasPrice: 1
   #   gasDenom: nria
   #   trustThreshold: 2/3
-
+  #
   # celestia-local-0:
   #   type: CosmosSdk
   #   compatMode: '0.34'
@@ -118,8 +116,6 @@ chains:
   #       account: celestia1y7ndhu6fs06c7qkwgr9anf0uc27st27uwdj6vq
   #     secret:
   #       resourceName: projects/$PROJECT_ID/secrets/celestia-ibc-relay-key/versions/latest
-  #       filename: celestia.json
-  #       key: token
   #   gasPrice: 0.12
   #   denom: 'utia'
   #   gasMultiplier: 1.1
@@ -127,9 +123,27 @@ chains:
   #   maxBlockTime: 10s
   #   trustThreshold: 2/3
 
+# When deploying in a production environment should use a secret provider
+# This is configured for use with GCP, need to set own resource names
+# and keys
 secretProvider:
-  enabled: false
+  enabled: true
   provider: gcp
+  # May need to update this template to match the secret provider
+  # it will be passed an object of the form:
+  # { key: {
+  #     name: <filename>,
+  #     secret: { resourceName: <resourceName> }
+  #   }
+  # }
+  #
+  # Can update set the source of each chain key at chain.<chain>.key.secret to
+  # match the secret provider's requirements. The default works for GCP.
+  # The secret file must be mapped to the <key.name>.json.
+  parametersTemplate: |-
+    secrets: |
+      - resourceName: {{ .key.secret.resourceName }}
+        fileName: "{{ .key.name }}.json"
 
 ports:
   rest: 3000
