--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -23,7 +23,6 @@ telemetry = { package = "astria-telemetry", path = "../astria-telemetry", featur
 pin-project-lite = "0.2.13"
 secrecy = { version = "0.8", features = ["serde"] }
 tonic-health = "0.10.2"
-itertools = "0.11.0"
 
 async-trait = { workspace = true }
 axum = { workspace = true }
@@ -33,6 +32,7 @@ futures = { workspace = true }
 humantime = { workspace = true }
 hyper = { workspace = true }
 hex = { workspace = true }
+itertools = { workspace = true }
 once_cell = { workspace = true }
 prost = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
