Set main to dev

--- a/argocd/apps/dev/main/rollup-application.yaml
+++ b/argocd/apps/dev/main/rollup-application.yaml
@@ -28,7 +28,7 @@ spec:
 
         valuesObject:
           global:
-            dev: false
+            dev: true
             rollup: 
               metrics: 
                 enabled: false
