--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -70,6 +70,7 @@ wiremock = { workspace = true }
 chrono = "0.4.35"
 tokio-stream = { version = "0.1.15", features = ["net"] }
 rand_chacha = "0.3.1"
+maplit = "1.0.2"
 
 [build-dependencies]
 astria-build-info = { path = "../astria-build-info", features = ["build"] }
