--- a/.github/workflows/reusable-run-checker.yml
+++ b/.github/workflows/reusable-run-checker.yml
@@ -83,6 +83,7 @@ jobs:
               - '.cargo/**'
             proto:
               - '**/*.proto'
+              - '!proto/vendored/**'
             rust:
               - '**/*.rs'
             toml:
