--- a/crates/astria-core/Cargo.toml
+++ b/crates/astria-core/Cargo.toml
@@ -16,6 +16,7 @@ keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+brotli = {  version = "5.0.0", optional = true }
 pbjson = { version = "0.6.0", optional = true }
 
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
@@ -46,6 +47,7 @@ serde = ["dep:serde", "dep:pbjson", "dep:base64-serde"]
 server = ["dep:tonic"]
 test-utils = ["dep:rand"]
 base64-serde = ["dep:base64-serde"]
+brotli = ["dep:brotli"]
 
 [dev-dependencies]
 astria-core = { path = ".", features = ["serde"] }
