feat(conductor, relayer)!: brotli compress data blobs (#1006)
## Summary
Uses brotli level 5 to compress data posted to celestia in relayer, and
decompresses from read in conductor.

## Background
Data size is largest component of DA costs, compression can reduce costs
of data posting. Based on research, and testing brotli level 5 provides
us fast enough compression with a good compression ratio for encoded
protobuf data.

## Changes
- compression with brotli in relayer
- decompression in conductor

## Testing
updated blackbox tests, smoke test on the repo

## Metrics
- `TOTAL_ASTRIA_BLOB_DATA_SIZE_FOR_BLOCK` - the total sum of bytes which
are in the data field of blobs for a single sequencer block
- `COMPRESSION_RATIO_FOR_ASTRIA_BLOCK` - the compression ratio of data
for the sequencer block

--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -13,7 +13,11 @@ name = "astria-conductor"
 
 [dependencies]
 astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
-astria-core = { path = "../astria-core", features = ["client", "serde"] }
+astria-core = { path = "../astria-core", features = [
+  "client",
+  "serde",
+  "brotli",
+] }
 astria-eyre = { path = "../astria-eyre" }
 celestia-client = { package = "astria-celestia-client", path = "../astria-celestia-client" }
 config = { package = "astria-config", path = "../astria-config" }
@@ -56,7 +60,11 @@ tracing-futures = { version = "0.2.5", features = ["futures-03"] }
 moka = { version = "0.12.5", features = ["future"] }
 
 [dev-dependencies]
-astria-core = { path = "../astria-core", features = ["server", "test-utils"] }
+astria-core = { path = "../astria-core", features = [
+  "server",
+  "test-utils",
+  "brotli",
+] }
 astria-grpc-mock = { path = "../astria-grpc-mock" }
 config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
