--- a/charts/evm-rollup/templates/statefulsets.yaml
+++ b/charts/evm-rollup/templates/statefulsets.yaml
@@ -115,13 +115,9 @@ spec:
             {{- toYaml .Values.resources.composer | trim | nindent 12 }}
         - name: conductor
           image: {{ include "conductor.image" . }}
-          command: [ "/scripts/start-conductor.sh" ]
+          command: [ "/usr/local/bin/astria-conductor" ]
           stdin: {{ .Values.global.useTTY }}
           tty: {{ .Values.global.useTTY }}
-          volumeMounts:
-            - mountPath: /scripts/
-              name: {{ .Values.config.rollup.name }}-conductor-scripts-volume
-              readOnly: true
           envFrom:
             - configMapRef:
                 name: {{ .Values.config.rollup.name }}-conductor-env
@@ -136,10 +132,6 @@ spec:
         - name: {{ .Values.config.rollup.name }}-executor-scripts-volume
           configMap:
             name: {{ .Values.config.rollup.name }}-executor-scripts
-            defaultMode: 0500
-        - name: {{ .Values.config.rollup.name }}-conductor-scripts-volume
-          configMap:
-            name: {{ .Values.config.rollup.name }}-conductor-scripts
             defaultMode: 0500
         - name: {{ $.Values.config.rollup.name }}-rollup-shared-storage-vol
           {{- if .Values.storage.enabled }}
