--- a/charts/hermes/values.yaml
+++ b/charts/hermes/values.yaml
@@ -16,7 +16,7 @@ createChannel:
   chainA: ''  # For local test is equencer-test-chain-0
   portA: ''   # likely "transfer"
   chainB: ''  # For default local test celestia-local-0
-  portB: ''  # likely "transfer"
+  portB: ''   # likely "transfer"
 
 rest:
   enabled: false
@@ -63,7 +63,7 @@ chains:
   #   storePrefix: ibc_data
   #   key:
   #     name: astria-wallet
-  #     content:
+  #     devContent:
   #       signing_key: [43, 216, 6, 201, 127, 14, 0, 175, 26, 31, 195, 50, 143, 167, 99, 169, 38, 151, 35, 200, 219, 143, 172, 79, 147, 175, 113, 219, 24, 109, 110, 144]
   #       address_type: Astria
   #     secret:
@@ -87,31 +87,10 @@ chains:
   #   accountPrefix: celestia
   #   key:
   #     name: celestia
-  #     content:
+  #     devContent:
   #       private_key: 8241386890823ca14743e5d4d583f879a5236af29f454ed4da6fe62b8439e2ab
   #       public_key: 03b0effa59e7eee365a888b4d2fa4c9be82a4925df255d4443151d61b11ac63714
-  #       address: [
-  #         39,
-  #         166,
-  #         219,
-  #         243,
-  #         73,
-  #         131,
-  #         245,
-  #         143,
-  #         2,
-  #         206,
-  #         64,
-  #         203,
-  #         217,
-  #         165,
-  #         252,
-  #         194,
-  #         189,
-  #         5,
-  #         171,
-  #         220
-  #       ]
+  #       address: [39, 166, 219, 243, 73, 131, 245, 143, 2, 206, 64, 203, 217, 165, 252, 194, 189, 5, 171, 220]
   #       address_type: Cosmos
   #       account: celestia1y7ndhu6fs06c7qkwgr9anf0uc27st27uwdj6vq
   #     secret:
@@ -131,8 +110,9 @@ secretProvider:
   provider: gcp
   # May need to update this template to match the secret provider
   # it will be passed an object of the form:
-  # { key: {
-  #     name: <filename>,
+  # {
+  #   key: {
+  #     name: <name>,
   #     secret: { resourceName: <resourceName> }
   #   }
   # }
