fix(ci): only run proto on actual proto changes

--- a/.github/workflows/reusable-run-checker.yml
+++ b/.github/workflows/reusable-run-checker.yml
@@ -82,8 +82,11 @@ jobs:
               - 'Cargo.lock'
               - '.cargo/**'
             proto:
-              - '**/*.proto'
-              - '!proto/vendored/**'
+              - 'proto/composerapis/**'
+              - 'proto/executionapis/**'
+              - 'proto/primitives/**'
+              - 'proto/protocolapis/**'
+              - 'proto/sequencerblockapis/**'
             rust:
               - '**/*.rs'
             toml:
