--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,8 @@ base64 = "0.21"
 base64-serde = "0.7.0"
 bytes = "1"
 celestia-tendermint = "0.32.1"
+celestia-types = "0.1.1"
+celestia-rpc = "0.1.1"
 clap = "4"
 ed25519-consensus = "2.1.0"
 ethers = "2.0.11"
