--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -14,12 +14,12 @@ name = "astria-conductor"
 [dependencies]
 astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
 astria-core = { path = "../astria-core", features = [
+  "celestia",
   "client",
   "serde",
   "brotli",
 ] }
 astria-eyre = { path = "../astria-eyre" }
-celestia-client = { package = "astria-celestia-client", path = "../astria-celestia-client" }
 config = { package = "astria-config", path = "../astria-config" }
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
 sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
@@ -59,6 +59,16 @@ tokio-stream = "0.1.14"
 tracing-futures = { version = "0.2.5", features = ["futures-03"] }
 moka = { version = "0.12.5", features = ["future"] }
 
+### Celestia specific imports
+#
+# The crates imported here are all specific to eigerco's celestia APIs
+# (including jsonrpsee).
+# As none of them are reexported it is important to keep these in sync
+# when updating.
+celestia-rpc = "0.1.1"
+celestia-types = { workspace = true }
+jsonrpsee = { version = "0.20", features = ["client-core", "macros"] }
+
 [dev-dependencies]
 astria-core = { path = "../astria-core", features = [
   "server",
@@ -70,8 +80,8 @@ config = { package = "astria-config", path = "../astria-config", features = [
   "tests",
 ] }
 
+celestia-tendermint = { workspace = true }
 insta = { workspace = true, features = ["json"] }
-jsonrpsee = { workspace = true, features = ["server"] }
 once_cell = { workspace = true }
 wiremock = { workspace = true }
 
