--- a/crates/astria-core/Cargo.toml
+++ b/crates/astria-core/Cargo.toml
@@ -17,6 +17,7 @@ keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 
 [dependencies]
 brotli = { version = "5.0.0", optional = true }
+celestia-types = { version = "0.1.1", optional = true }
 pbjson = { version = "0.6.0", optional = true }
 
 merkle = { package = "astria-merkle", path = "../astria-merkle" }
@@ -42,6 +43,7 @@ base64-serde = { workspace = true, optional = true }
 base64 = { workspace = true }
 
 [features]
+celestia = ["dep:celestia-types"]
 client = ["dep:tonic"]
 serde = ["dep:serde", "dep:pbjson", "dep:base64-serde"]
 server = ["dep:tonic"]
